service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grader-service-nodeport
  labels:
    app: grader
    release: 1.0.0
  annotations:
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 30000
      protocol: TCP
      name: grader
  selector:
    app: grader
    release: 1.0.0
